Fix #4056: Fix minor css issue on mobile

--- a/src/components/profile/style/profile.less
+++ b/src/components/profile/style/profile.less
@@ -112,6 +112,12 @@
     }
   }
 
+  button + .ga-profile-icons {
+   @media (max-width: 780px){
+     width: ~"calc(100% - 50px)";
+   }
+  }
+
   .ga-wrapper {
     position: relative;
     display: inline-block;
